# ComputeHorde

./: .git-blame-ignore-revs  .gitignore  .gitlint  AGENTS.md  ASYNC_CANCELLATION_ANALYSIS.md  ASYNC_CONTEXT_ISSUE_ANALYSIS.md  ASYNC_VS_CELERY_ANALYSIS.md  COMPONENT_REDESIGN_ANALYSIS.md  CONCURRENT_TASKS_ANALYSIS.md  FACILITATOR_CLIENT_REDESIGN.md  JOB_STATUS_UPDATES_ANALYSIS_orig.md  JOB_UPDATE_MANAGER_REDESIGN.md  LICENSE  MESSAGE_RECEIVING_ANALYSIS.md  QUEUE_CHOICE_ANALYSIS.md  README.md  REDESIGN.md  RETRY_LOGIC_ANALYSIS.md  TIMEOUT_STRATEGY_ANALYSIS.md  VALIDATOR_TEST_REFACTORING_GUIDE.md  facilitator-protocol.md  install_executor.sh  install_executors-test.sh  install_local_miner.sh  install_miner.sh  install_validator.sh  noxfile.py  precommit.sh  pyproject.toml  setup-dev.sh
compute_horde/: .dockerignore  CHANGELOG.md  README.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  settings.py  setup-dev.sh
compute_horde/changelog.d/: +publishing.infrastructure.md
compute_horde/compute_horde/: base_requests.py  certificate.py  collateral.py  dynamic_config.py  executor_class.py  job_errors.py  manifest_utils.py  organic_job_errors.py  protocol_consts.py  protocol_messages.py  pylon.py  receipts.py  settings.py  signature.py  subtensor.py  test_wallet.py  utils.py
compute_horde/compute_horde/base/: __init__.py  common_messages.py  docker.py  output_upload.py  volume.py
compute_horde/compute_horde/blockchain/: apps.py  block_cache.py  tasks.py
compute_horde/compute_horde/em_protocol/: executor_requests.py  miner_requests.py
compute_horde/compute_horde/fv_protocol/: facilitator_requests.py  fv_protocol_consts.py  validator_requests.py
compute_horde/compute_horde/miner_client/: base.py  organic.py  organic_sync.py
compute_horde/compute_horde/mv_protocol/: __init__.py  admin.py  apps.py  miner_requests.py  models.py  validator_requests.py
compute_horde/compute_horde/receipts/: __init__.py  admin.py  apps.py  models.py  schemas.py  transfer.py  transfer_checkpoints.py
compute_horde/compute_horde/smart_contracts/: map_contract.py  utils.py
compute_horde/compute_horde/test_base/: LICENSE  __init__.py  pylon.py  test_validator_requests.py
compute_horde/compute_horde/transport/: __init__.py  base.py  stub.py  ws.py
compute_horde/compute_horde/validators/: apps.py  tasks.py
compute_horde/tests/: conftest.py  settings.py  test_blockchain.py  test_certificate.py  test_dynamic_config.py  test_executor_class_map.py  test_facilitator_requests.py  test_job_request.py  test_manifest_utils.py  test_organic_miner_client.py  test_receipts.py  test_receipts_local_store.py  test_receipts_transfer.py  test_run_organic_job.py  test_signature.py  test_subtensor.py  test_transport.py  test_utils.py  test_validators.py  utils.py
compute_horde/tests/test_app/: models.py
compute_horde_sdk/: .cruft.json  .gitignore  .shellcheckrc  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml
compute_horde_sdk/docs/source/: api_reference.rst  conf.py  fallback.rst  index.rst  installation.rst  quickstart.rst
compute_horde_sdk/src/_compute_horde_models/: executor_class.py  output_upload.py  signature.py  volume.py
compute_horde_sdk/src/compute_horde_core/: certificate.py  compatibility.py  executor_class.py  output_upload.py  signature.py  streaming.py  volume.py
compute_horde_sdk/tests/: conftest.py  utils.py
compute_horde_sdk/tests/unit/: __init__.py
examples/volume_manager/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_tests.sh  test_endpoints.py  test_integration.py
examples/volume_manager/volume_manager/: __main__.py  api.py  schemas.py  storage.py  utils.py
executor/: .cruft.json  README.md  README_AWS.md  deploy.sh  letsencrypt_setup.sh  noxfile.py  pyproject.toml  setup-dev.sh
executor/app/: build-image.sh  publish-image.sh
executor/app/src/: manage.py  mypy.ini  pytest.ini  requirements.txt
executor/devops/scripts/: vars.sh
facilitator/: .cruft.json  .gitignore  README.md  README_AWS.md  deploy-to-aws.sh  deploy.sh  letsencrypt_setup.sh  noxfile.py  pyproject.toml  setup-dev.sh
facilitator/dev_env_setup/: start_celery.sh
facilitator_sdk/: .cruft.json  .gitignore  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml  test.py
facilitator_sdk/docs/: sdk_signatures.md
facilitator_sdk/tests/: conftest.py
health_probe/: .gitignore  README.md  build-image.sh  main.py  pyproject.toml  setup-dev.sh
health_probe/health_probe/: analyzer.py  choices.py  exceptions.py  jobs.py  models.py  probe.py  settings.py
local_stack/: force_cleanup.sh  prepare.sh  pyproject.toml  run_and_await_readiness.sh  run_in_screen.sh  run_in_tmux.sh  run_in_tmux_panes.sh  screenrc  send_fallback_job.py  send_fallback_job_streaming.py  send_hello_world_job.py  send_huggingface_job.py  send_several_subsequent_jobs.py  send_simple_job.py
local_stack/aws/: create_iam_user.py
local_stack/fallback_job/: send_fallback_job.py  send_fallback_job_streaming.py
local_stack/tabs/: 0.facilitator.sh  1.facilitator-celery.sh  2.miner.sh  3.validator-celery.sh  3.validator-connect.sh  4.validator-celery.sh
miner/: .cruft.json  .gitignore  README.md  README_AWS.md  deploy.sh  letsencrypt_setup.sh  noxfile.py  pyproject.toml  setup-dev.sh
miner/app/: build-image.sh  publish-image.sh
miner/changelog/: 102.bugfix
scripts/stress/: .gitignore  plot.py  pyproject.toml  run.py
validator/: .cruft.json  .dockerignore  .gitignore  .shellcheckrc  README.md  README_AWS.md  changelog_template.jinja2  deploy.sh  noxfile.py  provision_s3.sh  pyproject.toml  run_organic_job.sh  setup-dev.sh  towncrier.toml
validator/app/: Dockerfile  build-image.sh  publish-image.sh
validator/changelog/: 100.feature  101.bugfix
validator/dev_env_setup/: start_celery.sh  start_celery_beat.sh  stop_celery.sh
validator/docs/: validator.md
validator/run_organic_job_v2/: download_input.py  download_models.py  gen_caption.py  run_organic_job_v2.sh
validator/run_organic_job_v3/: download_datasets.py  run_organic_job_v3.sh  train_mnist.py
(+1082 files in other folders)
