[project]
name = "ComputeHorde"
dependencies = []
requires-python = "==3.11.*"
dynamic = ["version"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "requests",
    "-e compute-horde @ file:///${PROJECT_ROOT}/compute_horde/",
    "-e file:///${PROJECT_ROOT}/miner",
    "-e file:///${PROJECT_ROOT}/executor",
    "-e file:///${PROJECT_ROOT}/validator",
]
