[project]
dependencies = []
requires-python = "==3.11.*"

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "requests",
    "-e compute-horde @ file:///${PROJECT_ROOT}/compute_horde/",
    "-e file:///${PROJECT_ROOT}/miner",
    "-e file:///${PROJECT_ROOT}/executor",
    "-e file:///${PROJECT_ROOT}/validator",
]

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
version = "0.0.1"

[[tool.towncrier.section]]
name = "New Features"
path = "features"
showcontent = true

[[tool.towncrier.section]]
name = "Bug Fixes"
path = "bugfixes"
showcontent = true

[[tool.towncrier.section]]
name = "Documentation"
path = "docs"
showcontent = true

[[tool.towncrier.section]]
name = "Removals"
path = "removals"
showcontent = true

[[tool.towncrier.section]]
name = "Miscellaneous"
path = "miscs"
showcontent = true
