[project]
name = "compute-horde-root"
version = "0.1.0"
dependencies = []
requires-python = "==3.11.*"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "requests",
    "compute-horde",
    "miner",
    "executor",
    "validator",
]

[tool.uv.sources]
compute-horde = { path = "compute_horde", editable = true }
miner = { path = "miner", editable = true }
executor = { path = "executor", editable = true }
validator = { path = "validator", editable = true }

[tool.uv]
prerelease = "allow"
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]
