[project]
name = "compute_horde"
requires-python = "==3.11.*"
version = "0"
dependencies = [
    'pydantic < 2.0.0,>=1.7.4',
    'bittensor >= 6.5.0,<7.0.0'
]
license = {text = "MIT License"}

[tool.setuptools.packages]
find = {}

[project.optional-dependencies]
format = ["ruff"]
lint = [
    "ruff",
    "codespell[toml]",
]
type_check = [
    "django-stubs[compatible-mypy]",
    "djangorestframework-stubs[compatible-mypy]",
    "mypy",
    "types-freezegun",
    "types-python-dateutil",
    "types-requests",
]

[tool.ruff]
src = [""]
# TODO add D
select = ["E", "F", "I", "UP"]
# TODO: remove E501 once docstrings are formatted
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102","D103", "D104", # TODO remove once we have docstring for all public methods
    "E501", # TODO: remove E501 once docstrings are formatted
]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"test/**" = ["D", "F403", "F405"]
