[project]
name = "compute-horde"
dynamic = ["version"]
authors = [{name = "Backend Developers LTD"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    'pydantic < 2.0.0,>=1.7.4',
    'bittensor == 6.8.2',
    'websockets>=12.0,<13.0',
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["compute_horde"]

[tool.pdm.version]
source = "scm"
tag_regex = '^library-v(?P<version>\d+\.\d+\.\d+(a\d+)?)$'

[tool.pdm.dev-dependencies]
format = ["ruff"]
lint = [
    "ruff",
    "codespell[toml]",
]
release = [
    "towncrier>=23.11.0,<24",
]
type_check = [
    "django-stubs[compatible-mypy]",
    "djangorestframework-stubs[compatible-mypy]",
    "mypy",
    "types-freezegun",
    "types-python-dateutil",
    "types-requests",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# TODO add D
select = ["E", "F", "I", "UP"]
# TODO: remove E501 once docstrings are formatted
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102","D103", "D104", # TODO remove once we have docstring for all public methods
    "E501", # TODO: remove E501 once docstrings are formatted
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test/**" = ["D", "F403", "F405"]

[tool.codespell]
skip = 'pdm.lock'

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
underlines = ["", "", ""]
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## [{version}](https://github.com/backend-developers-ltd/ComputeHorde/releases/tag/library-v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/backend-developers-ltd/ComputeHorde/issues/{issue})"

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Doc"
showcontent = true

[[tool.towncrier.type]]
directory = "infrastructure"
name = "Infrastructure"
showcontent = true