[project]
name = "compute-horde"
version = "0.0.18"
authors = [{name = "Backend Developers LTD"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "pydantic<3,>=2.3",
    "bittensor<9.0.0,>=8.3.1",
    "websockets<14.0,>=13.0",
    "more-itertools>=10.2.0",
    "phx-class-registry>=4.1.0",
    "requests>=2.32.2",
    "Django~=4.2.4",
    "cryptography>=42.0.8",
    "aiohttp>=3.10.10",
]

[build-system]
requires = ["pdm-backend==2.4.3"]
build-backend = "pdm.backend"

[tool.uv]
prerelease = "allow"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["compute_horde"]
excludes = ["compute_horde/settings.py"]

[dependency-groups]
format = ["ruff"]
lint = [
    "ruff",
    "codespell[toml]",
]
release = [
    "towncrier>=23.11.0,<24",
]
type_check = [
    "django-stubs[compatible-mypy]",
    "djangorestframework-stubs[compatible-mypy]>=3.15.1",
    "mypy",
    "types-freezegun",
    "types-python-dateutil",
    "types-requests",
]
test = [
    "pytest>=8.2.1",
    "pytest-asyncio>=0.24.0",
    "responses>=0.25.0",
    "freezegun>=1.5.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# TODO add D
select = ["E", "F", "I", "UP", "B"]
# TODO: remove E501 once docstrings are formatted
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102","D103", "D104", # TODO remove once we have docstring for all public methods
    "E501", # TODO: remove E501 once docstrings are formatted
    "B027", "B904", "B905",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/**" = ["D", "F403", "F405", "B018"]

[tool.codespell]
skip = 'pdm.lock'

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
underlines = ["", "", ""]
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## [{version}](https://github.com/backend-developers-ltd/ComputeHorde/releases/tag/library-v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/backend-developers-ltd/ComputeHorde/issues/{issue})"

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Doc"
showcontent = true

[[tool.towncrier.type]]
directory = "infrastructure"
name = "Infrastructure"
showcontent = true
