[project]
name = "executor"
requires-python = "==3.11.*"
version = "0"

dependencies = [
    "Django~=4.2.4",
    "django-cors-headers~=4.2.0",
    "django-environ~=0.11.2",
    "django-extensions==3.2.3",
    "django-probes==1.7.0",
    "django-debug-toolbar==4.1.0",
    "celery~=5.3.1",
    "flower~=2.0.0",
    "gunicorn==20.1.0",
    "psycopg2-binary~=2.9.7",
    "redis~=4.6.0",
    "sentry-sdk>=1.29.2",
    "ipython==8.14.0",
    "nox==2024.10.09",
    "httpx==0.26.0",
    "channels[daphne]==4.*",
    "websockets>=14.0,<15.0",
    "compute-horde",
    "prometheus-client~=0.17.0",
    "django-prometheus==2.3.1",
    "django-business-metrics @ git+https://github.com/reef-technologies/django-business-metrics.git@9d08ddb3a9d26e8a7e478110d7c8c34c3aa03a01",
    "huggingface-hub[hf_transfer]>=0.26.1",
    "packaging>=24.2",
]

[tool.uv.sources]
compute-horde = { path = "../compute_horde", editable = true }

[tool.uv]
prerelease = "allow"
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]

[build-system]
requires = ["pdm-backend==2.4.3"]
build-backend = "pdm.backend"

[dependency-groups]
test = [
    "pytest",
    "pytest-django",
    "pytest-xdist",
    "pytest-httpx",
    "ipdb",
    "freezegun",
    "requests-toolbelt>=1.0.0",
    "psutil>=7.0.0",
]
format = [
    "ruff",
]
lint = [
    "ruff",
    "codespell[toml]",
]
type_check = [
    "django-stubs[compatible-mypy]",
    "djangorestframework-stubs[compatible-mypy]>=3.15.1",
    "mypy",
    "types-freezegun",
    "types-python-dateutil",
    "types-requests",
]
security_check = [
    "bandit>=1.7.7",
]

[tool.ruff]
src = ["app/src"]
line-length = 100

[tool.ruff.lint]
# TODO add D
select = ["E", "F", "I", "UP", "B"]
# TODO: remove E501 once docstrings are formatted
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102","D103", "D104", # TODO remove once we have docstring for all public methods
    "E501", # TODO: remove E501 once docstrings are formatted
    "B027", "B904", "B905",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/**" = ["D", "F403", "F405", "B018"]

[tool.codespell]
skip = '*.min.js,*.lock,*/monitoring_certs/*'
ignore-words-list = 'datas'
