[project]
name = "local_stack"
requires-python = "==3.11.*"
version = "0"

dependencies = [
    "compute-horde",
    "compute-horde-sdk",
    "boto3>=1.34.54",
]

[tool.uv.sources]
compute-horde = { path = "../compute_horde", editable = true }
compute-horde-sdk = { path = "../compute_horde_sdk", editable = true }

[tool.uv]
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]
# Instead of allowing prerelease for all packages,
# we add overrides here so only the specified packages can resolve to prerelease.
override-dependencies = ["bt-decode>=0.5.0a2"]

[build-system]
requires = ["pdm-backend==2.4.3"]
build-backend = "pdm.backend"

[dependency-groups]
